# Robots

./: README.md
DoublePendulum/: CMakeLists.txt  package.xml
DoublePendulum/config/: joint_names_DoublePendulum.yaml
DoublePendulum/launch/: display.launch  gazebo.launch
DoublePendulum/meshes/: A1.STL  A2.STL  base_link.STL
DoublePendulum/urdf/: DoublePendulum.csv  DoublePendulum.py  DoublePendulum.urdf  DoublePendulum_RandomTorque.py  Modulo_data_1000.csv  Pendulum_data_30000.csv  Pendulum_data_6000.csv
Leg/: L2001_24.SLDPRT  L2002_24.SLDPRT  L2003_24.sldprt  L2004_24.sldprt  L2005_24.SLDPRT  L2006_24.SLDPRT  L2007_24.SLDPRT  LEG_24.SLDASM  ~$L2005_24.SLDPRT
Leg/Leg_assy/: CMakeLists.txt  package.xml
Leg/Leg_assy/config/: joint_names_Leg_assy.yaml
Leg/Leg_assy/launch/: display.launch  gazebo.launch
Leg/Leg_assy/meshes/: L1.STL  L2.STL  L3.STL  base_link.STL
Leg/Leg_assy/urdf/: Leg_assy.csv  Leg_assy.urdf
LeggedRobot/meshes/: FL1.STL  FL2.STL  FL3.STL  FR1.STL  FR2.STL  FR3.STL  RL1.STL  RL2.STL  RL3.STL  RR1.STL  RR2.STL  RR3.STL  base_link.STL
LeggedRobot/urdf/: 4LeggedRobot.urdf
WBR/: WB01.SLDPRT  WB02.SLDPRT  WB03.SLDPRT  WB04.SLDPRT  WBR_prototype.SLDASM
WBR/WBR_prototype/: CMakeLists.txt  package.xml
WBR/WBR_prototype/config/: joint_names_WBR_prototype.yaml
WBR/WBR_prototype/launch/: display.launch  gazebo.launch
WBR/WBR_prototype/meshes/: A15_Link.STL  A1_Link.STL  A26_Link.STL  A2_Link.STL  A37_Link.STL  A3_Link.STL  A48_Link.STL  A4_Link.STL  WL_Link.STL  WR_Link.STL  base_link.STL
WBR/WBR_prototype/urdf/: WBR_prototype.csv  (+1 more)
